--- a/tripwire-overrides.css
+++ b/tripwire-overrides.css
@@ -91,51 +91,28 @@
 }
 
 /* Wormhole Effects */
-[data-icon=wolf-rayet]:before {
+.whEffect:before {
   content: '';
   width: .8em;
   height: .8em;
   margin-left: .2em;
-  background-color: #e28a0d;
   display: inline-block;
+}
+[data-icon=wolf-rayet]:before {
+  background-color: #e28a0d;
 }
 [data-icon=magnetar]:before {
-  content: '';
-  width: .8em;
-  height: .8em;
-  margin-left: .2em;
   background-color: #e06fdf;
-  display: inline-block;
 }
 [data-icon=red-giant]:before {
-  content: '';
-  width: .8em;
-  height: .8em;
-  margin-left: .2em;
   background-color: #d9534f;
-  display: inline-block;
 }
 [data-icon=pulsar]:before {
-  content: '';
-  width: .8em;
-  height: .8em;
-  margin-left: .2em;
   background-color: #428bca;
-  display: inline-block;
 }
 [data-icon=cataclysmic-variable]:before {
-  content: '';
-  width: .8em;
-  height: .8em;
-  margin-left: .2em;
   background-color: #ffb;
-  display: inline-block;
 }
 [data-icon=blackhole]:before {
-  content: '';
-  width: .8em;
-  height: .8em;
-  margin-left: .2em;
   background-color: #000;
-  display: inline-block;
 }
